--- a/SchoolERP.WebApp/Web.config
+++ b/SchoolERP.WebApp/Web.config
@@ -4,12 +4,62 @@
   http://go.microsoft.com/fwlink/?LinkId=301880
   -->
 <configuration>
+  <configSections>
+    <section name="loggingConfiguration" type="Microsoft.Practices.EnterpriseLibrary.Logging.Configuration.LoggingSettings, Microsoft.Practices.EnterpriseLibrary.Logging, Version=5.0.505.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" requirePermission="true" />
+    <section name="unity" type="Microsoft.Practices.Unity.Configuration.UnityConfigurationSection, Microsoft.Practices.Unity.Configuration" />
+  </configSections>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
+  <loggingConfiguration name="" tracingEnabled="true" defaultCategory="Event">
+    <listeners>
+      <add name="Error Listener" type="Microsoft.Practices.EnterpriseLibrary.Logging.TraceListeners.RollingFlatFileTraceListener, Microsoft.Practices.EnterpriseLibrary.Logging, Version=5.0.505.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" listenerDataType="Microsoft.Practices.EnterpriseLibrary.Logging.Configuration.RollingFlatFileTraceListenerData, Microsoft.Practices.EnterpriseLibrary.Logging, Version=5.0.505.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" fileName="App_Data/Log/Errors.log" formatter="Text Formatter" header="-------------------------------Message Begin-------------------------------------" footer="-------------------------------Message End---------------------------------------" rollFileExistsBehavior="Increment" timeStampPattern="MM-dd-yyyy hh-mm-ss" rollSizeKB="5000" />
+      <add name="Event Listener" type="Microsoft.Practices.EnterpriseLibrary.Logging.TraceListeners.RollingFlatFileTraceListener, Microsoft.Practices.EnterpriseLibrary.Logging, Version=5.0.505.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" listenerDataType="Microsoft.Practices.EnterpriseLibrary.Logging.Configuration.RollingFlatFileTraceListenerData, Microsoft.Practices.EnterpriseLibrary.Logging, Version=5.0.505.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" fileName="App_Data/Log/Events.log" formatter="Text Formatter" header="-------------------------------Message Begin-------------------------------------" footer="-------------------------------Message End---------------------------------------" rollFileExistsBehavior="Increment" timeStampPattern="MM-dd-yyyy hh-mm-ss" rollSizeKB="5000" />
+      <add name="Performance Parameter Listener" type="Microsoft.Practices.EnterpriseLibrary.Logging.TraceListeners.RollingFlatFileTraceListener, Microsoft.Practices.EnterpriseLibrary.Logging, Version=5.0.505.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" listenerDataType="Microsoft.Practices.EnterpriseLibrary.Logging.Configuration.RollingFlatFileTraceListenerData, Microsoft.Practices.EnterpriseLibrary.Logging, Version=5.0.505.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" fileName="App_Data/Log/PerformanceParam.log" formatter="Text Formatter" header="-------------------------------Message Begin-------------------------------------" footer="-------------------------------Message End---------------------------------------" rollFileExistsBehavior="Increment" timeStampPattern="MM-dd-yyyy hh-mm-ss" rollSizeKB="5000" />
+      <add name="SDKComm Listener" type="Microsoft.Practices.EnterpriseLibrary.Logging.TraceListeners.RollingFlatFileTraceListener, Microsoft.Practices.EnterpriseLibrary.Logging, Version=5.0.505.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" listenerDataType="Microsoft.Practices.EnterpriseLibrary.Logging.Configuration.RollingFlatFileTraceListenerData, Microsoft.Practices.EnterpriseLibrary.Logging, Version=5.0.505.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" fileName="App_Data/Log/SDK Communication.log" formatter="Text Formatter" header="-------------------------------Message Begin-------------------------------------" footer="-------------------------------Message End---------------------------------------" rollFileExistsBehavior="Increment" timeStampPattern="MM-dd-yyyy hh-mm-ss" rollSizeKB="5000" />
+    </listeners>
+    <formatters>
+      <add type="Microsoft.Practices.EnterpriseLibrary.Logging.Formatters.TextFormatter, Microsoft.Practices.EnterpriseLibrary.Logging, Version=5.0.505.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" template="Timestamp: {timestamp}{newline}&#xA;Message: {message}{newline}&#xA;Category: {category}{newline}&#xA;Priority: {priority}{newline}&#xA;EventId: {eventid}{newline}&#xA;Severity: {severity}{newline}&#xA;Title:{title}{newline}&#xA;Extended Properties: {dictionary({key} - {value}{newline})}" name="Text Formatter" />
+    </formatters>
+    <logFilters>
+      <add type="Microsoft.Practices.EnterpriseLibrary.Logging.Filters.LogEnabledFilter, Microsoft.Practices.EnterpriseLibrary.Logging, Version=5.0.505.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" enabled="true" name="Logging Enabled Filter" />
+      <add type="Microsoft.Practices.EnterpriseLibrary.Logging.Filters.PriorityFilter, Microsoft.Practices.EnterpriseLibrary.Logging, Version=5.0.505.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" name="Priority Filter" minimumPriority="5" maximumPriority="9" />
+    </logFilters>
+    <categorySources>
+      <add switchValue="All" name="Error">
+        <listeners>
+          <add name="Error Listener" />
+        </listeners>
+      </add>
+      <add switchValue="All" name="Event">
+        <listeners>
+          <add name="Event Listener" />
+        </listeners>
+      </add>
+      <add switchValue="All" name="SDKComm">
+        <listeners>
+          <add name="SDKComm Listener" />
+        </listeners>
+      </add>
+      <add switchValue="All" name="PerformanceParam">
+        <listeners>
+          <add name="Performance Parameter Listener" />
+        </listeners>
+      </add>
+    </categorySources>
+    <specialSources>
+      <allEvents switchValue="All" name="All Events" />
+      <notProcessed switchValue="All" name="Unprocessed Category" />
+      <errors switchValue="All" name="Logging Errors &amp; Warnings">
+        <listeners>
+          <add name="Error Listener" />
+        </listeners>
+      </errors>
+    </specialSources>
+  </loggingConfiguration>
   <system.web>
     <compilation debug="true" targetFramework="4.5" />
     <httpRuntime targetFramework="4.5" />
