--- a/SchoolERP.WebApp/Web.config
+++ b/SchoolERP.WebApp/Web.config
@@ -8,6 +8,9 @@
     <section name="loggingConfiguration" type="Microsoft.Practices.EnterpriseLibrary.Logging.Configuration.LoggingSettings, Microsoft.Practices.EnterpriseLibrary.Logging, Version=5.0.505.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" requirePermission="true" />
     <section name="unity" type="Microsoft.Practices.Unity.Configuration.UnityConfigurationSection, Microsoft.Practices.Unity.Configuration" />
   </configSections>
+  <connectionStrings>
+    <add name="SchoolERPDatabaseContext" connectionString="Data Source=IMSEZ-D0246\SQLEXPRESS;Initial Catalog=SIO;Integrated Security=True;MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />
+  </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
